<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:paddingBottom="16dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <EditText
            android:layout_marginTop="35dp"
            android:id="@+id/new_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_email"
            android:imeOptions="actionUnspecified"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true" />

        <EditText android:id="@+id/new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/change_password"
            android:imeActionId="@+id/login"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true" />
        <EditText android:id="@+id/retype_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Retype_pass"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true" />

        <Button
            android:background="@drawable/mybutton"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_user"
            android:id="@+id/register_user"
            android:textColor="@color/White"/>


        <Button
            android:background="@color/LightSeaGreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back_to_login"
            android:id="@+id/back_to_login"
            android:layout_marginTop="30dp"
            android:onClick="backToLogin"
            android:textColor="@color/White"/>

</LinearLayout>
