<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="@dimen/activity_vertical_margin">

    <EditText
        android:layout_marginTop="35dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:id="@+id/new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/change_password"
        android:imeActionId="@+id/login"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true" />

    <EditText android:id="@+id/retype_new_password"
        android:layout_width="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_height="wrap_content"
        android:hint="@string/Retype_pass"
        android:imeActionId="@+id/login"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true" />
    <EditText android:id="@+id/old_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Old_Pass"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:imeActionId="@+id/login"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true" />

    <Button
        android:background="@color/LightSeaGreen"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_height="wrap_content"
        android:text="@string/Chng_Pass"
        android:id="@+id/change_pass"
        android:layout_weight="0.10"
        android:textColor="@color/White"/>

    <Button
        android:background="@color/LightSeaGreen"
        android:layout_marginTop="100dp"
        android:layout_width="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_height="wrap_content"
        android:text="@string/Reset_Interests"
        android:id="@+id/reset_interests"
        android:layout_weight="0.10"
        android:textColor="@color/White"/>
    <Button
        android:background="@color/LightSeaGreen"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_height="wrap_content"
        android:text="@string/Delete_Acct"
        android:id="@+id/delete_act"
        android:layout_weight="0.10"
        android:textColor="@color/White"/>

</LinearLayout>